WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296979
[Fuzzilli] Fix build of Fuzzilli.cpp after WTF::Vector::data() became private
https://bugs.webkit.org/show_bug.cgi?id=296979
Summary
[Fuzzilli] Fix build of Fuzzilli.cpp after WTF::Vector::data() became private
David Kilzer (:ddkilzer)
Reported
2025-08-05 17:08:46 PDT
Fix build of Fuzzilli.cpp after WTF::Vector::data() became private. Build error: ``` OpenSource/Source/JavaScriptCore/fuzzilli/Fuzzilli.cpp:120:20: error: 'data' is a private member of 'WTF::Vector<char>' 120 | memcpy(buffer->data(), reprlInputData, inputSize); | ~~~~~~~~^~~~ In file included from OpenSource/Source/JavaScriptCore/fuzzilli/Fuzzilli.cpp:22: In file included from OpenSource/Source/JavaScriptCore/fuzzilli/Fuzzilli.h:24: OpenSource/WebKitBuild/Release/usr/local/include/wtf/Vector.h:1032:8: note: declared private here 1032 | T* data() LIFETIME_BOUND { return Base::buffer(); } | ^ 1 error generated. ``` Regressed with: Make Vector::data() private <
https://bugs.webkit.org/show_bug.cgi?id=294079
> <
rdar://153018667
> <
https://commits.webkit.org/296071@main
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-05 17:09:10 PDT
<
rdar://problem/157610643
>
David Kilzer (:ddkilzer)
Comment 2
2025-08-05 17:13:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48989
EWS
Comment 3
2025-08-06 09:09:44 PDT
Committed
298288@main
(8d405296b4c3): <
https://commits.webkit.org/298288@main
> Reviewed commits have been landed. Closing PR #48989 and removing active labels.
David Kilzer (:ddkilzer)
Comment 4
2025-08-10 15:06:56 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/49201
EWS
Comment 5
2025-08-10 15:09:39 PDT
Committed
298490@main
(436e12a8c846): <
https://commits.webkit.org/298490@main
> Reviewed commits have been landed. Closing PR #49201 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug