[Fuzzilli] Fix build of Fuzzilli.cpp after WTF::Vector::data() became private <https://bugs.webkit.org/show_bug.cgi?id=296979> <rdar://157610643>

Reviewed by Yusuke Suzuki.

* Source/JavaScriptCore/fuzzilli/Fuzzilli.cpp:
(Fuzzilli::readInput):
- Switch from memcpy() to memcpySpan() to stop using Vector::data().

Canonical link: https://commits.webkit.org/298288@main